--- a/style.css
+++ b/style.css
@@ -110,18 +110,26 @@ h1{
     cursor: pointer;
 }
 .Thank-you{
-width : 60%;
+width : 80%;
 height : 80%;
 object-fit: cover;
 }
-.rating-value{
+.top .rating-value{
     padding: 0.6em;
     width: fit-content;
     background-color: var(--Neutral-medium-grey);
     border-radius: 20px;
-    color: var(--Neutral-white);
+    color: var(--primary-color);
+    font-weight: bold;
 }
-.thank-you{
+.card-thank-you{
+    display: flex;
+    width: 450px;
+    height: 450px ;
+    margin: auto;
+    padding: 2rem;
+    background-color: var(--Dark-blue);
+    border-radius: 25px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -129,7 +137,7 @@ object-fit: cover;
     text-align: center;
 }
 
-.thank-you p{
+.card-thank-you p{
     color: var(--Neutral-light-grey);
     font-weight: 400;
     opacity: 0.5;
